package techstore.patterns.command;

public interface Command {
    void execute();
}