@startuml TechStoreCommandPattern

skinparam class {
    BackgroundColor<<Interface>> LightBlue
    BackgroundColor<<Command>> LightGreen
    BackgroundColor<<Invoker>> LightYellow
    BackgroundColor<<Service>> LightPink
}

interface Command <<Interface>> {
    + execute()
}

class AddProductCommand <<Command>> {
    - catalogueService: CatalogueService
    - product: Product
    + execute()
}

class UpdateProductCommand <<Command>> {
    - catalogueService: CatalogueService
    - productToUpdate: Product
    + execute()
}

class DeleteProductCommand <<Command>> {
    - catalogueService: CatalogueService
    - productIdToDelete: int
    + execute()
}

class AdminCommandInvoker <<Invoker>> {
    - command: Command
    + setCommand(Command)
    + executeCommand()
}

interface CatalogueService <<Service>> {
    + addProduct(Product)
    + updateProduct(Product)
    + deleteProduct(int)
}

Command <|-- AddProductCommand
Command <|-- UpdateProductCommand
Command <|-- DeleteProductCommand

AdminCommandInvoker o--> Command

AddProductCommand --> CatalogueService
UpdateProductCommand --> CatalogueService
DeleteProductCommand --> CatalogueService

AddProductCommand --> Product
UpdateProductCommand --> Product

note top of Command
  <<interface>>
  Defines the contract for all\nconcrete command implementations
end note

note right of AdminCommandInvoker
  <<Invoker>>
  • Holds and executes commands
  • Decouples command initiation\n  from execution
  • Could be extended to support\n  command history for undo/redo
end note

note left of CatalogueService
  <<Service Interface>>
  • Could be implemented directly\n  or via Proxy
  • Defines catalog operations
end note

@enduml